--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contact-manager-redux",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://maheshkumarsoni.github.io/ContactManager-Redux",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
